fix: recent file list won't be updated when file/folder moved to another folder ; fix: opened file will be closed when it/it's folder moved to another folder; add dragging folders/files to workspace since the workspace panel is redesined; add tooltip to workspace buttons